nginx-ms/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mynginx-deployment
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
         - name: nginx-container
           image: nginx
           ports:
            - containerPort: 80
           volumeMounts:
            - name: local-pvc
              mountPath: /var/www/html
      volumes:
        - name: local-pvc
          persistentVolumeClaim:
             claimName: local-pvc
